--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.daggerpractice">
 
     <application
-        android:name=".BaseApplication"
+        android:name=".practice.application.BaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".AuthActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".practice.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
